edition = "2023";

package organization.v1;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "v1/common.proto";

option features.(pb.go).api_level = API_OPAQUE;
option features.field_presence = IMPLICIT;
option go_package = "github.com/fundament-oss/fundament/organization-api/pkg/proto/gen/v1;organizationv1";

// MemberService manages organization members
service MemberService {
  // List all members of the current organization
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
  // Get a member by membership ID or user ID
  rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
  // Delete a member from the organization
  rpc DeleteMember(DeleteMemberRequest) returns (DeleteMemberResponse);
  // Update a member's permission
  rpc UpdateMemberPermission(UpdateMemberPermissionRequest) returns (google.protobuf.Empty);
}

// List members request
message ListMembersRequest {}

// Get member request â€” look up by membership ID or user ID
message GetMemberRequest {
  oneof lookup {
    string id = 10 [(buf.validate.field).string = {uuid: true}];
    string user_id = 20 [(buf.validate.field).string = {uuid: true}];
  }
}

// Get member response
message GetMemberResponse {
  Member member = 10;
}

// List members response
message ListMembersResponse {
  repeated Member members = 10;
}

// Delete member request
message DeleteMemberRequest {
  string id = 10 [(buf.validate.field).string = {uuid: true}];
}

// Delete member response
message DeleteMemberResponse {}

// Update member permission request
message UpdateMemberPermissionRequest {
  string id = 10 [(buf.validate.field).string = {uuid: true}];
  string permission = 20 [(buf.validate.field).string = {
    in: [
      "viewer",
      "admin"
    ]
  }];
}

// Member information
message Member {
  string id = 10;
  // user_id is the actual user ID (users.id), as opposed to id which is the membership record ID (organizations_users.id)
  string user_id = 80;
  string name = 20;
  // external_ref is empty for pending invitations
  string external_ref = 30 [features.field_presence = EXPLICIT];
  // email is set for invited members
  string email = 50 [features.field_presence = EXPLICIT];
  // permission is "viewer" or "admin"
  string permission = 60;
  // status is "pending", "accepted", "declined", or "revoked"
  string status = 70;
  google.protobuf.Timestamp created = 40;
}
